fix bottom bar issue on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-body, #root {
+body, #root, html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -17,10 +17,8 @@ body, #root {
   background-color: $bgColor;
   overflow-x: hidden;
   overflow-y: auto;
-  min-height: 100vh;
-  max-height: 100vh;
-  min-width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  height: 100%;
   position: relative;
   z-index: 500;
 }
